ISSUE-#28 fix thumnbail position, add z-index to ribbon,

--- a/src/components/slidepanel/slidethumbnail/SlideThumbnail.module.css
+++ b/src/components/slidepanel/slidethumbnail/SlideThumbnail.module.css
@@ -4,7 +4,6 @@
   height: 15%;
   margin-left: 5%;
   margin-top: 10px;
-
   border: 1px solid #000000;
   border-radius: 2px;
   cursor: pointer;
@@ -14,10 +13,12 @@
 {
   font-size: 1.2em;
   color: black;
+  margin-left: -13px;
 }
 
 .slideview
 {
+  margin-top: -4%;
   width: 90%;
   height: 80%;
 
